--- a/events.html
+++ b/events.html
@@ -23,9 +23,9 @@
 <div id="article3">
 	<h1 align="center">Events Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 	<div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/mansi.jpg" alt="John" style="width:100%">
+  <img src="photos/team/mansi.jpg" alt="John" style="width:100%">
   <h3>Mansi Mehta</h3>
   <p class="title">Team lead</p>
   <font size="2px"><p>mansimehta291997@gmail.com</p></font>
@@ -39,7 +39,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Nitesh Sharma</h3>
   <p class="title"></p>
   <p>snitesh407@gmail.com</p>
@@ -53,7 +53,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Raghav Mantri</h3>
   <p class="title"></p>
   <p>raghavmantri3@gmail.com</p>
@@ -67,7 +67,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/padmagopal.jpg" alt="John" style="width:100%">
+  <img src="photos/team/padmagopal.jpg" alt="John" style="width:100%">
   <h3>SS Padmagopal</h3>
   <p class="title"></p>
   <p>vnglraja1999@gmail.com</p>
@@ -81,7 +81,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Shivam Shrotriya</h3>
   <p class="title"></p>
   <p>shivamshrotriya17@gmail.com</p>
@@ -95,7 +95,7 @@
  
 </div>
 <div class="card"  style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/anupriya.jpg" alt="John" style="width:100%">
+  <img src="photos/team/anupriya.jpg" alt="John" style="width:100%">
   <h3>Anupriya Mutha</h3>
   <p class="title"></p>
   <p>mutha.anupriya@gmail.com</p>
@@ -109,7 +109,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/rishab.jpg" alt="John" style="width:100%">
+  <img src="photos/team/rishab.jpg" alt="John" style="width:100%">
   <h3>Rishab Gupta</h3>
   <p class="title"></p>
   <p>gotorishab@gmail.com</p>
@@ -123,7 +123,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/keshav.jpg" alt="John" style="width:100%">
+  <img src="photos/team/keshav.jpg" alt="John" style="width:100%">
   <h3>Keshav Damani</h3>
   <p class="title"></p>
   <p>keshavdamanikjj@gmail.com</p>
@@ -137,7 +137,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/akash.jpg" alt="John" style="width:100%">
+  <img src="photos/team/akash.jpg" alt="John" style="width:100%">
   <h3>Akash Chandra</h3>
   <p class="title"></p>
   <font size="2px"><p>akashchandra06961@gmail.com</p></font>
