--- a/marketing.html
+++ b/marketing.html
@@ -23,9 +23,9 @@
 <div id="article3">
 	<h1 align="center">Marketing Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 	<div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/shubham.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/shubham.jpg" alt="team_member" style="width:100%">
   <h3>Shubham Saluja</h3>
   <p class="title">Team Lead</p>
   <p>shubham.saluja21@gmail.com</p>
@@ -39,7 +39,7 @@
  
 </div>
 	<div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/nitin.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/nitin.jpg" alt="team_member" style="width:100%">
   <h3>Nitin Kalra</h3>
   <p class="title"></p>
   <p>nikkalra88@gmail.com</p>
@@ -53,7 +53,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/abhineet.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/abhineet.jpg" alt="team_member" style="width:100%">
   <h3>Abhineet Sharma</h3>
   <p class="title"></p>
   <font size="2px"><p>abhineet.sharma@student.amity.edu</p></font>
@@ -67,7 +67,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/iyshwarya.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/iyshwarya.jpg" alt="team_member" style="width:100%">
   <h3>Iyshwarya Konda</h3>
   <p class="title"></p>
   <p>iyshwaryakonda@outlook.com</p>
@@ -81,7 +81,7 @@
  
 </div>
 <div class="card"  style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/gaurav_yadav.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/gaurav_yadav.jpg" alt="team_member" style="width:100%">
   <h3>Gaurav Yadav</h3>
   <p class="title"></p>
   <p>beinggaurav30@gmail.com</p>
@@ -95,7 +95,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="team_member" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="team_member" style="width:100%">
   <h3>Yash Vardhan Chaturvedi</h3>
   <p class="title"></p>
   <p>yashchaturvedi13@gmail.com</p>
