--- a/portfolio(ecell).html
+++ b/portfolio(ecell).html
@@ -22,10 +22,10 @@
 		<div id="article3" align="center">
 			<h1 align="center">Overall Coordinator</h1>
 			<div align="center">
-				<img src="images/horizontal.png" height="35px" width="350px" align="center">
+				<img src="photos/horizontal.png" height="35px" width="350px" align="center">
 			</div>
 			<div class="card" style="width:25%; margin-left:5px; margin:15px;" align="center">
-	  			<img src="images/team/jatin.jpg" alt="John" style="width:100%">
+	  			<img src="photos/team/jatin.jpg" alt="John" style="width:100%">
 	  			<h3>Jatin Deewan</h3>
 	  			<p class="title">General Secretary</p>
 				<p>jatindeewan@gmail.com</p>
