--- a/relationship.html
+++ b/relationship.html
@@ -23,9 +23,9 @@
 <div id="article3">
 	<h1 align="center">Relationship Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 <div class="card"  style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/prayas.jpg" alt="John" style="width:100%">
+  <img src="photos/team/prayas.jpg" alt="John" style="width:100%">
   <h3>Prayas Mittal</h3>
   <p class="title">Vice President, Team Lead</p>
   <p>prayas.mittal@gmail.com</p>
@@ -39,7 +39,7 @@
  
 </div>	
 <div class="card"  style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/pooja.jpg" alt="John" style="width:100%">
+  <img src="photos/team/pooja.jpg" alt="John" style="width:100%">
   <h3>Pooja Madan</h3>
   <p class="title"></p>
   <p>poojamadan18@gmail.com</p>
@@ -53,7 +53,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Akarsh Agarwal</h3>
   <p class="title"></p>
   <p>akarshivc99999@gmail.com</p>
@@ -67,7 +67,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/gaurav_vyas.jpg" alt="John" style="width:100%">
+  <img src="photos/team/gaurav_vyas.jpg" alt="John" style="width:100%">
   <h3>Gaurav Vyas</h3>
   <p class="title"></p>
   <font size="2px"><p>gaurav231214endless@gmail.com</p></font>
@@ -81,7 +81,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Kapil Aswani</h3>
   <p class="title"></p>
   <p>kapilaswani.201@gmail.com</p>
