--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -24,9 +24,9 @@
 <div id="article3">
 	<h1 align="center">Web Development Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 	<div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/harsh.jpg" alt="John" style="width:100%">
+  <img src="photos/team/harsh.jpg" alt="John" style="width:100%">
   <h3>Harsh Agrawal</h3>
   <p class="title">Team Lead</p>
   <p>agrawalharsh891@gmail.com</p>
@@ -40,7 +40,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/ranjeet.jpg" alt="John" style="width:100%">
+  <img src="photos/team/ranjeet.jpg" alt="John" style="width:100%">
   <h3>Ranjeet Singh</h3>
   <p class="title">Web Developer, E Cell</p>
   <p>kr.ranjeetsingh4@gmail.com</p>
@@ -54,7 +54,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/vivek.jpg" alt="John" style="width:100%">
+  <img src="photos/team/vivek.jpg" alt="John" style="width:100%">
   <h3>Vivek Mittal</h3>
   <p class="title"></p>
   <p>mvivek480@gmail.com</p>
@@ -68,7 +68,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/swarnima.jpg" alt="John" style="width:100%">
+  <img src="photos/team/swarnima.jpg" alt="John" style="width:100%">
   <h3>Swarnima Singh Mandhata</h3>
   <p class="title"></p>
   <p>ssm97mandhata@gmail.com</p>
@@ -81,7 +81,7 @@
  </div-->
  </div>
  <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/rounak.jpg" alt="John" style="width:100%">
+  <img src="photos/team/rounak.jpg" alt="John" style="width:100%">
   <h3>Rounak Sarda</h3>
   <p class="title"></p>
   <p>sardarounak1997@gmail.com</p>
@@ -96,7 +96,7 @@
 </div>
 
 <div class="card" style="width:25%; float:left; margin:15px;">
-  <img src="Images/team/mrigendra.jpg" alt="John" style="width:100%">
+  <img src="photos/team/mrigendra.jpg" alt="John" style="width:100%">
   <h3>Mrigendra Soni</h3>
   <p class="title"></p>
   <p>mrig.hardwell@gmail.com</p>
