--- a/media.html
+++ b/media.html
@@ -23,9 +23,9 @@
 <div id="article3">
 	<h1 align="center">Media Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 	<div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/twinkle.jpg" alt="John" style="width:100%">
+  <img src="photos/team/twinkle.jpg" alt="John" style="width:100%">
   <h3>Twinkle Chouhan</h3>
   <p class="title">President, Team Lead</p>
   <font size="2px"><p>chouhan.twinkle97@gmail.com</p></font>
@@ -39,7 +39,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/raj.jpg" alt="John" style="width:100%">
+  <img src="photos/team/raj.jpg" alt="John" style="width:100%">
   <h3>Rajkumar Agarwal</h3>
   <p class="title"></p>
   <p>payrajagarwal@gmail.com</p>
@@ -53,7 +53,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Nishant Singh Pal</h3>
   <p class="title"></p>
   <font size="2px"><p>pal.nishusingh2112@gmail.com</p></font>
@@ -67,7 +67,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/kartik.jpg" alt="John" style="width:100%">
+  <img src="photos/team/kartik.jpg" alt="John" style="width:100%">
   <h3>Kartik Sharma</h3>
   <p class="title"></p>
   <p>kartiksharma9205@gmail.com</p>
