--- a/sponsorship.html
+++ b/sponsorship.html
@@ -23,9 +23,9 @@
 <div id="article3">
 	<h1 align="center">Sponsorship Team</h1>
 	<div align="center">
-	<img src="Images/horizontal.png" height="35px" width="350px" align="center"></img></div>
+	<img src="photos/horizontal.png" height="35px" width="350px" align="center"></img></div>
 	<div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/shreya.jpg" alt="John" style="width:100%">
+  <img src="photos/team/shreya.jpg" alt="John" style="width:100%">
   <h3>Shreya Gupta</h3>
   <p class="title">Team Lead</p>
   <p>shreya.gupta0178@gmail.com</p>
@@ -39,7 +39,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/radhika.jpg" alt="John" style="width:100%">
+  <img src="photos/team/radhika.jpg" alt="John" style="width:100%">
   <h3>Radhika Sharma</h3>
   <p class="title"></p>
   <p>ridzisharma10@gmail.com</p>
@@ -53,7 +53,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/shreyanshi.jpg" alt="John" style="width:100%">
+  <img src="photos/team/shreyanshi.jpg" alt="John" style="width:100%">
   <h3>Shreyanshi Sharma</h3>
   <p class="title"></p>
   <p>shreyanshi729@gmail.com</p>
@@ -67,7 +67,7 @@
  
 </div>
 <div class="card" style="width:25%; float:left; margin-left:5px; margin:15px;">
-  <img src="Images/team/avatar.jpg" alt="John" style="width:100%">
+  <img src="photos/team/avatar.jpg" alt="John" style="width:100%">
   <h3>Harshit Kasliwal</h3>
   <p class="title"></p>
   <p>kasliwalharshit@gmail.com</p>
